# hse_ap_hw2_calories_bot

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
calories_bot/: __main__.py
calories_bot/config/: dependencies.py
calories_bot/features/check_progress/: __init__.py  command.py
calories_bot/features/log_food/: __init__.py  command.py  conversation_handler.py  states.py
calories_bot/features/log_food/steps/: input_gram.py
calories_bot/features/log_user_messages/: __init__.py  handler.py
calories_bot/features/log_water/: __init__.py  command.py
calories_bot/features/log_workout/: __init__.py  command.py
calories_bot/features/set_profile/: __init__.py  command.py  conversation_handler.py  states.py
calories_bot/features/set_profile/steps/: activity.py  age.py  calorie_goal.py  cancel.py  city.py  height.py  utils.py  weight.py
calories_bot/features/start/: __init__.py  command.py
calories_bot/features/testing/: activate_profile.py
calories_bot/models/: profile.py
calories_bot/settings/: __init__.py  logging.py  settings.py
calories_bot/storage/: profile.py
calories_bot/storage/impl/: memory_profile_storage.py
